# LLD_Path

./: README.md
BookMyShowLLD/: BMS_Requirements
SOLID/: main_OpenClosed_Priciple.cpp
Singleton_Design/: CMakeCache.txt  CMakeLists.txt  Logger.cpp  Logger.hpp  Makefile  func1.cpp  func1.hpp  func2.cpp  func2.hpp  hello.cpp  hello.hpp  main.cpp
Zerodha/: CMakeLists.txt  Makefile  common.h  exchangeConnector.cpp  exchangeConnector.h  order.cpp  order.h  orderExecutioner.h  orderMgr.h  orderValidator.cpp  orderValidator.h  stock.h  system.cpp  system.h  user.h  zerodha.cpp
